# Aritra_tasks

./: README.md
aritra_task1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
aritra_task1/aritra_task1/: go_to_goal.py  new_goal.py  spawn_turtle.py
aritra_task1/aritra_task1/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
aritra_task1/aritra_task1/log/: latest_build
aritra_task1/launch/: autonomous_game.launch.py
aritra_task2/: package.xml  setup.cfg  setup.py
aritra_task2/URDF/: kcs.urdf  otter.urdf
aritra_task2/aritra_task2/: kcs.py  utils.py
